# lmx3-deploy

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci_testing.yml
examples/: quickstart.py
examples/jax_cuda/: README.md
examples/jax_cuda/requirements/: base.txt
lxm3_deploy/: __init__.py  launcher.py  main.py
lxm3_deploy/config/: config.py
requirements/: base.in  base.txt  dev.txt
singularity/: Makefile
tests/: test-dist.bash  test_version.py
